@@ -41,6 +41,9 @@
         <hudi.trino.java.version>25</hudi.trino.java.version>
         <main.basedir>${project.parent.basedir}</main.basedir>
         <checkstyle.skip>true</checkstyle.skip>
+        <!-- Trino's BlockEncodingSimdSupport uses jdk.incubator.vector for SIMD; the
+             incubator module must be added explicitly on the test JVM command line. -->
+        <argLine>-Xmx4g -Xms128m -XX:-OmitStackTraceInFastThrow --add-modules jdk.incubator.vector</argLine>
     </properties>
 
     <dependencyManagement>
